# track-back

./: .coveragerc  .env  .env.example  .gitignore  LICENSE  Makefile  README.md  config.toml  index.html  pyproject.toml
.github/workflows/: sync-frontend.yml  test.yaml
docs/: openapi.json
src/: __init__.py  cli_client.py  local_ip.py  main.py  server.py  song.py  user.py  utils.py  websocket_handler.py
src/backend/: __init__.py  main.py
src/backend/game/: __init__.py  index.html  song.py  track_back_game.py  user.py
src/backend/music_service/: abstract_adapter.py  apple_music.py  factory.py  mock.py  spotify.py
src/backend/server/: __init__.py  game_context.py  local_ip.py  server.py  websocket_handler.py
src/cli/: __init__.py  client.py  main.py
src/example_package/: __init__.py  example_module.py
src/frontend/: index.html
src/game/: game_logic.py  game_modes.py  song.py  track_back_game.py  user.py  utils.py
src/game/strategies/: __init__.py  abstract_game_strategy.py  error.py  factory.py  sequential.py  simultaneous.py
src/music_providers/: __init__.py  abstract_music_provider.py  apple_music.py  factory.py  spotify.py  utils.py
src/music_service/: __init__.py  abstract_adapter.py  apple_music.py  error.py  factory.py  mock.py  spotify.py
src/server/: connection_manager.py  game_context.py  game_sessions.py  local_ip.py  main.py  server.py  utils.py  websocket_handler.py
tests/: __init__.py  test_api.py  test_application_apple_music.py  test_integration_cli_client.py  test_shutdown.py
tests/game/: test_track_back_game.py
tests/test_example_package/: __init__.py  test__init__.py  test_example_module.py
tests/test_game/: __init__.py  test_single_player_game.py  test_two_players_sequential_game.py  test_two_players_simulatenous_game.py
tests/test_gamegame/: test_track_back_game.py
tests/test_main/: test_apple_simultaneous.toml  test_build_server.py  test_main.py  test_spotify_sequential.toml
tests/test_music_service/: test_apple_music.py
tests/test_server/: test_connecting_user.py  test_full_game_client_connection.py  test_game_modes.py  test_integration_api.py  test_single_player_games.py  test_two_players_sequential.py  test_two_players_simultaneous.py  test_user_registration.py
web_ui/: index.html  script.js  style.css
