[project]
name =  "track-back"
authors = [
    {name = "Alexander Carrels"},
]
dependencies = [
    "spotipy==2.25.1",
    "python-dotenv==1.1.0"
]

description = "A game where players sort songs played by release date"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
track-back = "main:main"

[tool.black]
target-version = ['py312']
line-length = 88 
# fast = True

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py312"
line-length = 88
lint.extend-select = ["I"] # exclude imports

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100