[project]
name =  "track-back"
authors = [
    {name = "Alexander Carrels"},
]
dependencies = [
    "spotipy==2.25.1",
    "python-dotenv==1.1.0",
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "websockets==15.0.1",
]

description = "A game where players sort songs played by release date"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
track-back = "main:main"
track-back-cli = "cli_client:main"


[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "coverage", "pytest-cov"]

lint = [
  "black",
  "isort",
  "ruff",
  "mypy",
  "pylint",
  "docstrfmt"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.isort]
profile = "black"
line_length = 79
 
[tool.black]
line-length = 79
preview = true
target-version = ["py312"]
 
[tool.ruff]
line-length = 79
fix = true
target-version = "py312"
 
[tool.ruff.format]
docstring-code-format = true
 
[tool.ruff.lint]
exclude = ["conf.py", "stubs"]

extend-select = [
  "ARG",  # flake8-unused-arguments
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "C90",  # flake8-mccabe
  "D",    # pydocstyle
  "E",    # pycodestyle
  "ERA",  # eradicate
  "F",    # pyflakes
  "FLY",  # flynt
  "I",    # isort
  "N",    # pep8-naming
  "NPY",  # numpy
  "PD",   # pandas-vet
  "PERF", # perflint
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "TD",   # flake8-todos
  "UP", # pyupgrade
]
ignore = [
  "TD003", # missing issue/link
  "PD011", # Use `.to_numpy()` instead of `.values`
  "PT011", # pytest.raises is too broad
  "E501",  # line length --> blacks job
]
unfixable = ["ERA001", "F841"] # commented code
 
[tool.ruff.lint.isort]
known-first-party = ["my_package"]
 
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["PLR2004", "S101"]
 
[tool.ruff.lint.pydocstyle]
convention = "numpy"
 
[tool.pylint.MISCELLANEOUS]
notes = '''''' # disables listing of todos
 
[tool.pylint."MESSAGES CONTROL"]
disable = [
  "too-few-public-methods"] 
max-line-length = 79
 
[tool.mypy]
strict = true
show_error_codes = true
show_error_context = true
python_version = "3.12"  # makes code compatible with 3.12 upwards
ignore_missing_imports = true
 
[tool.pydocstringformatter]
style = "numpydoc"
write = true
max-line-length = 88
 
[tool.docstrfmt]
files = ["CHANGELOG.rst", "docs/**/*.rst"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 50